# Transformer-implementation

./: .gitignore  README.md  best_model.pt  dataset_preparation.py  datasources.md  eval_checkpoint.py  generate.py  main.py  output_example.txt  pyproject.toml  requirements.txt  run.py  run_experiment.sh  sweep_shakespeare.py  sweep_shakespeare_all_20260620_181228.json  sweep_shakespeare_results_20260620_175405.json  test_models.py  transformer.py
configs/: dpo_ultrafeedback.yaml  gqa_swiglu.yaml  grpo_gsm8k.yaml  mamba_bpe.yaml  mamba_swiglu_none.yaml  mha_rope.yaml  moe_linear.yaml  pipeline_full.yaml  pipeline_sft_dpo.yaml  ppo_anthropic.yaml  pretrain_tinystories.yaml  sft_alpaca.yaml  sft_oasst.yaml  sweep_example.yaml  sweep_shakespeare.yaml  wikitext_mqa_rope.yaml
docs/: architecture.md  attention.md  datasets.md  datasets_new.md  dpo.md  ffn.md  future_work.md  grpo.md  index.md  position.md  ppo.md  pretraining.md  results.md  sft.md  training.md  training_pipeline.md
tests/: conftest.py  test_models.py  test_training_pipeline.py
transformer_impl/: __init__.py  config.py  embedding.py  generate.py  model.py  train.py
transformer_impl/attention/: __init__.py  base.py  dilated_attn.py  global_local.py  gqa.py  linear_attn.py  mamba.py  mha.py  mqa.py  ssm.py  window_attn.py
transformer_impl/blocks/: transformer_block.py
transformer_impl/datasets/: __init__.py  alpaca_sft.py  base.py  dolly_sft.py  fineweb.py  gsm8k.py  hf_dataset.py  hh_rlhf.py  math_dataset.py  mbpp.py  oasst_sft.py  tinyshakespeare.py  tinystories.py  tokenizer.py  ultrafeedback.py  (+1 more)
(+26 files in other folders)
