[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.21.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.17.1",
    "tensorboard>=2.13.0",
    "tiktoken>=0.13.0",
    "tokenizers>=0.13.3",
    "torch>=2.1.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]
