[project]
name = "transformer-impl"
version = "0.2.0"
description = "Modular Transformer implementation with multiple attention mechanisms, FFNs, and position encodings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "tokenizers>=0.13.3",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
]
